@@ -30,6 +30,7 @@ Version 1.4.18 - SVN
     other issues that can come up, sizing for large groups will be a
     problem (#2611967)
   - Added Tamil translation (Thanks to Kengatharaiyer Sarveswaran).
+  - Added Bengali (Bangladesh) translation (Thanks to Jamil Ahmed).
 
 Version 1.4.17 - 03 December 2008
 ---------------------------------
